# koniradesk

./: .gitignore  CMakeLists.txt  Cargo.toml  KoniraDesk.sln  README.md  setup-build.jl  vcpkg.json
Client/konira_desk_client/: Cargo.toml  README.md
Client/konira_desk_client_domain/: Cargo.toml
Client/konira_desk_client_infra/: Cargo.toml
Client/konira_desk_client_tauri/: Cargo.toml  tauri.conf.json
Client/konira_desk_client_tauri/src/: main.rs
Client/konira_desk_client_ui/: Cargo.toml  Dioxus.toml  README.md  tailwind.config.js
Client/konira_desk_client_ui/assets/: dioxus.png.br  home_page.css  login_component.css  login_page.css  remoteid_component.css  styles.css  styles.css.br  tailwind.css  tauri.svg.br
Client/konira_desk_client_ui/src/: app.rs  main.rs  router.rs
Client/konira_desk_client_ui/src/components/: login_component.rs  mod.rs  remoteid_component.rs
Client/konira_desk_client_ui/src/pages/: home_page.rs  login_page.rs  mod.rs
Server/konira_desk_server/: Cargo.toml
Server/konira_desk_server/src/: main.rs
Server/konira_desk_server_domain/: Cargo.toml
Server/konira_desk_server_infra/: Cargo.toml
Shared/certs/: cert.pem  key.pem
Shared/konira_desk_libs/: Cargo.toml
src/Koniradesk-server/: Dockerfile  Koniradesk.server.csproj  Program.cs
src/Koniradesk-server/Contexts/: AppJsonSerializerContext.cs  KoniraDeskServerContext.cs
src/Koniradesk-server/DTOs/: StreamSharedDTO.cs
src/Koniradesk-server/Models/StreamingSharedModel/: StreamMonitor.cs  StreamingPool.cs
src/Koniradesk-server/Properties/: launchSettings.json
src/Koniradesk-server/Protos/: greet.proto  koniradesk.proto
src/Koniradesk-server/Services/: GreeterService.cs  KoniradeskService.cs
src/koniradesk-client/Koniradeskt.interop/: Dockerfile  Koniradeskt.interop.csproj  Koniradeskt.interop.http  Program.cs
src/koniradesk-client/Koniradeskt.interop/Context/: AppJsonSerializerContext.cs  KoniraDeskServerContext.cs
src/koniradesk-client/Koniradeskt.interop/Model/: MonitorShared.cs
src/koniradesk-client/Koniradeskt.interop/Model/CLI/: CLIArgs.cs
src/koniradesk-client/Koniradeskt.interop/Properties/: launchSettings.json
src/koniradesk-client/koniradesk-commons/: Cargo.toml  build.rs
src/koniradesk-client/koniradesk-commons/commons/: CMakeLists.txt  EncodeH264.cpp  EncodeH264.h  Encoders.cpp  commons.cpp  commons.h
src/koniradesk-client/koniradesk-commons/src/: lib.rs
src/koniradesk-client/koniradesk-infra/: Cargo.toml
src/koniradesk-client/koniradesk-infra/src/modules/: mod.rs
src/koniradesk-client/koniradesk-infra/src/modules/codec/: mod.rs
src/koniradesk-client/koniradesk-infra/src/modules/screen_capture/: capture.rs  mod.rs  win.rs
src/koniradesk-client/koniradesk-infra/src/modules/server_con/: client.rs  http_over_pipenamed.rs  mod.rs
src/koniradesk-client/koniradesk-infra/src/modules/tracing_setup/: mod.rs
src/koniradesk-client/koniradesk-ui/: package-lock.json  package.json
src/koniradesk-client/koniradesk-ui/src/: App.tsx  Router.tsx  main.css  main.tsx  theme.tsx
src/koniradesk-client/koniradesk-ui/src-tauri/: Cargo.toml  tauri.conf.json
src/koniradesk-client/koniradesk-ui/src-tauri/src/: main.rs
src/koniradesk-client/koniradesk-ui/src/components/: HeaderNavBar.tsx  IDConnectionPanel.tsx  IDLocalPanel.tsx
src/koniradesk-client/koniradesk-ui/src/pages/: Home.tsx
src/koniradesk-tests/ConsoleClient.test/: Program.cs  UdpServer.cs
src/koniradesk-tests/ConsoleClient.test/Properties/: launchSettings.json
src/koniradesk-tests/Koniradesk.utests/: Koniradesk.utests.csproj  UnitTest1.cs
