# [PROJECT_DIR]/Cargo.toml
[workspace]
members = ["Client/konira_desk_client_domain" , "Client/konira_desk_client_infra", "Client/konira_desk_client", "Server/konira_desk_server", "Server/konira_desk_server_domain", "Server/konira_desk_server_infra", "Shared/konira_desk_libs"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }

# server deps
xitca-http = { version = "0.6", features = ["http2", "http3", "openssl", "rustls"] }
xitca-server = { version = "0.4", features = ["quic"] }
xitca-service = "0.2.0"
openssl = "0.10.44"
quinn = { version = "0.11", features = ["ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-pemfile = "2"
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.16", default-features = false, features = ["env-filter", "fmt"] }