[package]
name = "koniradesk-infra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
captrs = "0.3.1"
tokio = { version = "1", features = ["full"] }
image = "0.25.1"
windows-capture = "1.1.3"
hyper  = { version = "1.3.1", features = ["client", "http2","http1"] }
hyper-util = { version = "0.1.3", features = ["http2","http1", "client-legacy", "tokio"] }
h2="*"
h3="*"
h3-quinn="*"
http="*"
http2="*"
http-body-util="0.1.1"
bytes = "1"
futures = "0.3"
structopt = "0.3"
rcgen = { version = "0.12" }
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rustls-native-certs = "0.6"
quinn = { version = "0.10", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "ring",
] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
    "ansi",
    "env-filter",
    "time",
    "tracing-log",
] }
winapi = { version = "0.3.8", features = ["d3d11", "d3dcommon", "dxgi", "dxgi1_2", "dxgitype", "ntdef", "unknwnbase", "windef", "winerror", "winuser"] }
wio = "0.2.2"
#opencv = "0.91"
#ffmpeg-sys-next="*"